tests/ui/consts/const-eval/index-out-of-bounds-never-type.stderr
error[E0080]: evaluation of `PrintName::<()>::VOID` failed
  --> $DIR/index-out-of-bounds-never-type.rs:10:9
   |
LL |         [][x]
   |         ^^^^^ index out of bounds: the length is 0 but the index is 0

note: the above error was encountered while instantiating `fn f::<()>`
  --> $DIR/index-out-of-bounds-never-type.rs:19:5
   |
LL |     f::<()>();
   |     ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
